Adapted to 'Máster en Matemáticas' section 00

--- a/00-Introduction.ipynb
+++ b/00-Introduction.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "<!--BOOK_INFORMATION-->\n",
     "<img align=\"left\" style=\"padding-right:10px;\" src=\"fig/cover-small.jpg\">\n",
-    "*This notebook contains an excerpt from the [Whirlwind Tour of Python](http://www.oreilly.com/programming/free/a-whirlwind-tour-of-python.csp) by Jake VanderPlas; the content is available [on GitHub](https://github.com/jakevdp/WhirlwindTourOfPython).*\n",
+    "\n",
+    "*Este notebook es una adaptación realizada por J. Rafael Rodríguez Galván del material \"[Whirlwind Tour of Python](http://www.oreilly.com/programming/free/a-whirlwind-tour-of-python.csp)\" de Jake VanderPlas; tanto el [contenido original](https://github.com/jakevdp/WhirlwindTourOfPython) como la [adpatación actual](https://github.com/rrgalvan/PythonIntroMasterMatemat)] están disponibles en Github.*\n",
     "\n",
     "*The text and code are released under the [CC0](https://github.com/jakevdp/WhirlwindTourOfPython/blob/master/LICENSE) license; see also the companion project, the [Python Data Science Handbook](https://github.com/jakevdp/PythonDataScienceHandbook).*\n"
    ]
@@ -30,10 +31,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conceived in the late 1980s as a teaching and scripting language, Python has since become an essential tool for many programmers, engineers, researchers, and data scientists across academia and industry.\n",
+    "Conceived in the late 1980s as a teaching and scripting language, **Python** has since become an essential tool for many programmers, engineers, researchers, and data scientists across academia and industry.\n",
     "As an astronomer focused on building and promoting the free open tools for data-intensive science, I've found Python to be a near-perfect fit for the types of problems I face day to day, whether it's extracting meaning from large astronomical datasets, scraping and munging data sources from the Web, or automating day-to-day research tasks.\n",
     "\n",
-    "The appeal of Python is in its simplicity and beauty, as well as the convenience of the large ecosystem of domain-specific tools that have been built on top of it.\n",
+    "The appeal of Python is in its simplicity and beauty, as well as the convenience of the **large ecosystem of domain-specific tools** that have been built on top of it.\n",
     "For example, most of the Python code in scientific computing and data science is built around a group of mature and useful packages:\n",
     "\n",
     "- [NumPy](http://numpy.org) provides efficient storage and computation for multi-dimensional data arrays.\n",
@@ -45,11 +46,22 @@
     "\n",
     "No less important are the numerous other tools and packages which accompany these: if there is a scientific or data analysis task you want to perform, chances are someone has written a package that will do it for you.\n",
     "\n",
-    "To tap into the power of this data science ecosystem, however, first requires familiarity with the Python language itself.\n",
+    "To tap into the power of this data science ecosystem, however, first requires **familiarity with the Python language itself**.\n",
     "I often encounter students and colleagues who have (sometimes extensive) backgrounds in computing in some language – MATLAB, IDL, R, Java, C++, etc. – and are looking for a brief but comprehensive tour of the Python language that respects their level of knowledge rather than starting from ground zero.\n",
     "This report seeks to fill that niche.\n",
     "\n",
-    "As such, this report in no way aims to be a comprehensive introduction to programming, or a full introduction to the Python language itself; if that is what you are looking for, you might check out one of the recommended references listed in [Resources for Learning](16-Further-Resources.ipynb).\n",
+    "---\n",
+    "- Encuesta para estudiantes:\n",
+    "    - ¿Qué conocimientos previos tienes en Python, de 0 a 5?\n",
+    "    - ¿Qué conocimientos previos tienes en otros lenguajes, de 0 a 5?\n",
+    "        - C, C++\n",
+    "        - Matlab, Octave\n",
+    "        - R\n",
+    "        - Maxima, Mathematica\n",
+    "        - Otros (Java, Fortran, etc)\n",
+    "---\n",
+    "\n",
+    "As such, this report **in no way aims to be a comprehensive introduction to programming, or a full introduction to the Python language itself**; if that is what you are looking for, you might check out one of the recommended references listed in [Resources for Learning](16-Further-Resources.ipynb).\n",
     "Instead, this will provide a whirlwind tour of some of Python's essential syntax and semantics, built-in data types and structures, function definitions, control flow statements, and other aspects of the language.\n",
     "My aim is that readers will walk away with a solid foundation from which to explore the data science stack just outlined."
    ]
@@ -60,7 +72,7 @@
    "source": [
     "## Using Code Examples\n",
     "\n",
-    "Supplemental material (code examples, exercises, etc.) is available for download at https://github.com/jakevdp/WhirlwindTourOfPython/.\n",
+    "Supplemental material (code examples, exercises, etc.) is available for download at https://github.com/jakevdp/WhirlwindTourOfPython *(and adapted in https://github.com/rrgalvan/PythonIntroMasterMatemat)*.\n",
     "This book is here to help you get your job done.\n",
     "In general, if example code is offered with this book, you may use it in your programs and documentation.\n",
     "You do not need to contact us for permission unless you’re reproducing a significant portion of the code.\n",
@@ -94,7 +106,7 @@
     "This report uses the syntax of Python 3, which contains language enhancements that are not compatible with the *2.x* series of Python.\n",
     "Though Python 3.0 was first released in 2008, adoption has been relatively slow, particularly in the scientific and web development communities.\n",
     "This is primarily because it took some time for many of the essential packages and toolkits to be made compatible with the new language internals.\n",
-    "Since early 2014, however, stable releases of the most important tools in the data science ecosystem have been fully-compatible with both Python 2 and 3, and so this book will use the newer Python 3 syntax.\n",
+    "Since early 2014, however, stable releases of the most important tools in the data science ecosystem have been fully-compatible with both Python 2 and 3, and so **this book will use the newer Python 3 syntax**.\n",
     "Even though that is the case, the vast majority of code snippets in this book will also work without modification in Python 2: in cases where a Py2-incompatible syntax is used, I will make every effort to note it explicitly."
    ]
   },
@@ -104,7 +116,7 @@
    "source": [
     "### Installation with conda\n",
     "\n",
-    "Though there are various ways to install Python, the one I would suggest – particularly if you wish to eventually use the data science tools mentioned above – is via the cross-platform Anaconda distribution.\n",
+    "Though there are various ways to install Python, the one I would suggest – particularly if you wish to eventually use the data science tools mentioned above – is via the cross-platform **Anaconda distribution**.\n",
     "There are two flavors of the Anaconda distribution:\n",
     "\n",
     "- [Miniconda](http://conda.pydata.org/miniconda.html) gives you Python interpreter itself, along with a command-line tool called ``conda`` which operates as a cross-platform package manager geared toward Python packages, similar in spirit to the ``apt`` or ``yum`` tools that Linux users might be familiar with.\n",
@@ -116,7 +128,22 @@
     "```\n",
     "[~]$ conda install ipython-notebook\n",
     "```\n",
-    "For more information on ``conda``, including information about creating and using conda environments, refer to the Miniconda package documentation linked at the above page."
+    "For more information on ``conda``, including information about creating and using conda environments, refer to the Miniconda package documentation linked at the above page.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "- **Tarea**: asegurarse de tener un ordenador en el que estén instalados los **siguientes paquetes**:\n",
+    "    - Ipython-notebook\n",
+    "    - Numpy\n",
+    "    - Scipy\n",
+    "    - Matplotlib\n",
+    "    - Pandas\n",
+    "\n",
+    "Lo más fácil es instalar el paquete completo [Anaconda](https://www.continuum.io/downloads) (aunque la descarga podría ser lenta). Otra posibilidad es instalar solamente [Miniconda](http://conda.pydata.org/miniconda.html) y luego instalar manualmente estos paquetes.\n",
+    "\n",
+    "En distribuciones GNU/Linux, estos paquetes se pueden instalar directamente desde el repositorio de software (por ejemplo, usando *apt* o *yum*).\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -124,6 +151,12 @@
    "metadata": {},
    "source": [
     "## The Zen of Python\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Disponible en castellano en [Wikipedia](https://es.wikipedia.org/wiki/Zen_de_Python).\n",
+    "\n",
+    "---\n",
     "\n",
     "Python aficionados are often quick to point out how \"intuitive\", \"beautiful\", or \"fun\" Python is.\n",
     "While I tend to agree, I also recognize that beauty, intuition, and fun often go hand in hand with familiarity, and so for those familiar with other languages such florid sentiments can come across as a bit smug.\n",
@@ -134,9 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -203,9 +234,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
