--- a/01-How-to-Run-Python-Code.ipynb
+++ b/01-How-to-Run-Python-Code.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "<!--BOOK_INFORMATION-->\n",
     "<img align=\"left\" style=\"padding-right:10px;\" src=\"fig/cover-small.jpg\">\n",
-    "*This notebook contains an excerpt from the [Whirlwind Tour of Python](http://www.oreilly.com/programming/free/a-whirlwind-tour-of-python.csp) by Jake VanderPlas; the content is available [on GitHub](https://github.com/jakevdp/WhirlwindTourOfPython).*\n",
+    "\n",
+    "*Este notebook es una adaptación realizada por J. Rafael Rodríguez Galván del material \"[Whirlwind Tour of Python](http://www.oreilly.com/programming/free/a-whirlwind-tour-of-python.csp)\" de Jake VanderPlas; tanto el [contenido original](https://github.com/jakevdp/WhirlwindTourOfPython) como la [adpatación actual](https://github.com/rrgalvan/PythonIntroMasterMatemat)] están disponibles en Github.*\n",
     "\n",
     "*The text and code are released under the [CC0](https://github.com/jakevdp/WhirlwindTourOfPython/blob/master/LICENSE) license; see also the companion project, the [Python Data Science Handbook](https://github.com/jakevdp/PythonDataScienceHandbook).*\n"
    ]
@@ -31,7 +32,7 @@
    "metadata": {},
    "source": [
     "Python is a flexible language, and there are several ways to use it depending on your particular task.\n",
-    "One thing that distinguishes Python from other programming languages is that it is *interpreted* rather than *compiled*.\n",
+    "One thing that distinguishes Python from other programming languages is that it is ***interpreted* rather than *compiled***.\n",
     "This means that it is executed line by line, which allows programming to be interactive in a way that is not directly possible with compiled languages like Fortran, C, or Java. This section will describe four primary ways you can run Python code: the *Python interpreter*, the *IPython interpreter*, via *Self-contained Scripts*, or in the *Jupyter notebook*."
    ]
   },
@@ -39,10 +40,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Python Interpreter\n",
+    "### 1. The Python Interpreter\n",
     "\n",
     "The most basic way to execute Python code is line by line within the *Python interpreter*.\n",
-    "The Python interpreter can be started by installing the Python language (see the previous section) and typing ``python`` at the command prompt (look for the Terminal on Mac OS X and Unix/Linux systems, or the Command Prompt application in Windows):\n",
+    "The Python interpreter can be started by installing the Python language (see the previous section) and typing ``python`` at the command prompt (a **shell**) (look for the Terminal on Mac OS X and Unix/Linux systems, or the Command Prompt application in Windows):\n",
     "```\n",
     "$ python\n",
     "Python 3.5.1 |Continuum Analytics, Inc.| (default, Dec  7 2015, 11:24:55)\n",
@@ -66,10 +67,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The IPython interpreter\n",
+    "### 2. The IPython interpreter\n",
     "\n",
     "If you spend much time with the basic Python interpreter, you'll find that it lacks many of the features of a full-fledged interactive development environment.\n",
-    "An alternative interpreter called *IPython* (for Interactive Python) is bundled with the Anaconda distribution, and includes a host of convenient enhancements to the basic Python interpreter.\n",
+    "An alternative interpreter called *IPython* (for Interactive Python) is bundled with the Anaconda distribution, and includes a host of **convenient enhancements to the basic Python interpreter**.\n",
     "It can be started by typing ``ipython`` at the command prompt:\n",
     "```\n",
     "$ ipython\n",
@@ -96,16 +97,26 @@
     "Out[3]: 15\n",
     "```\n",
     "Note that just as the input is numbered, the output of each command is numbered as well.\n",
-    "IPython makes available a wide array of useful features; for some suggestions on where to read more, see [Resources for Further Learning](16-Further-Resources.ipynb)."
+    "IPython makes available a wide array of useful features; for some suggestions on where to read more, see [Resources for Further Learning](16-Further-Resources.ipynb).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "- **Tarea**: \n",
+    "    - Abrir una shell, dentro de ella IPython y realizar algunas operaciones matemáticas sencillas. \n",
+    "    - ¿Están disponibles por defecto funciones avanzadas como seno, coseno o logaritmo (`sin(x)`, `cos(x)`, `log(x)`)? \n",
+    "    - Piensa que Python es un lenguaje de propósito general (como C, Java u otros) y para usar este tipo de funciones será necesario cargar una \"biblioteca\" o \"paquete\" adecuado\n",
+    "    - Aprovecha para ver qué aspecto tienen los errores que se producen al intentar usar estas funciones. Como verás, los errores en Python son muy descriptivos\n",
+    "\n",
+    "---\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Self-contained Python scripts\n",
+    "### 3. Self-contained Python scripts\n",
     "\n",
-    "Running Python snippets line by line is useful in some cases, but for more complicated programs it is more convenient to save code to file, and execute it all at once.\n",
+    "Running Python snippets line by line is useful in some cases, but for more complicated programs it is more convenient **to save code to file, and execute it all at once**.\n",
     "By convention, Python scripts are saved in files with a *.py* extension.\n",
     "For example, let's create a script called *test.py* which contains the following:\n",
     "``` python\n",
@@ -120,18 +131,39 @@
     "Running test.py\n",
     "Result is 15\n",
     "```\n",
-    "For more complicated programs, creating self-contained scripts like this one is a must."
+    "For **more complicated programs**, creating self-contained scripts like this one is a must.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "- **Tarea**: \n",
+    "    - Utilizar un editor de textos sencillo para escribir un script similar al anterior. \n",
+    "    - Abrir una *shell* y ejecutar el *script*\n",
+    "    - Localizar e instalar un editor que sea adecuado para edición de código Python. Por ejemplo, [Spyder](https://www.spyder-ide.org/) ofrece, además de un editor especializado, una interfaz similar a la de Matlab/Octave.\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Jupyter notebook\n",
+    "### 4. The Jupyter/IPython notebook \n",
     "\n",
-    "A useful hybrid of the interactive terminal and the self-contained script is the *Jupyter notebook*, a document format that allows executable code, formatted text, graphics, and even interactive features to be combined into a single document.\n",
+    "A useful hybrid of the interactive terminal and the self-contained script is the *Jupyter notebook*, also knwon as *IPython notebook*, a document format that **allows executable code, formatted text, graphics, and even interactive features** to be **combined into a single document**.\n",
     "Though the notebook began as a Python-only format, it has since been made compatible with a large number of programming languages, and is now an essential part of the [*Jupyter Project*](https://jupyter.org/).\n",
-    "The notebook is useful both as a development environment, and as a means of sharing work via rich computational and data-driven narratives that mix together code, figures, data, and text."
+    "The notebook is useful both as a development environment, and aFos a means of sharing work via rich computational and data-driven narratives that mix together code, figures, data, and text.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "For more information and **first steps with IPython Notebook**, see e.g https://nbviewer.jupyter.org/github/nicolasfauchereau/Python_NIWA_Wellington/blob/master/notebooks/IPython_notebook.ipynb\n",
+    "\n",
+    "- **Tareas**:\n",
+    "    - Ejecuta Ipython Notebook y crea un nuevo notebook de tipo *Python 3*\n",
+    "    - Dentro de él, en una celda de código, teclea algún código Python sencillo para comprobar como funciona\n",
+    "    - Crea una celda de tipo *Markdown* y escribe algún texto, incluyendo texto **negritas** y *cursivas*. Utiliza listas enumeradas y sin numeración.\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -160,9 +192,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
