--- a/Index.ipynb
+++ b/Index.ipynb
@@ -25,9 +25,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These are the Jupyter Notebooks behind my O'Reilly report,\n",
-    "[*A Whirlwind Tour of Python*](http://www.oreilly.com/programming/free/a-whirlwind-tour-of-python.csp).\n",
-    "The full notebook listing is available [on Github](https://github.com/jakevdp/WhirlwindTourOfPython).\n",
+    "Aquí se recojen una serie de Notebooks basados en el libro de O'Reilly\n",
+    "[*A Whirlwind Tour of Python*](http://www.oreilly.com/programming/free/a-whirlwind-tour-of-python.csp). *El [material actual](https://github.com/rrgalvan/PythonIntroMasterMatemat) es una adaptación realizada por J. Rafael Rodríguez Galván del [contenido original](https://github.com/jakevdp/WhirlwindTourOfPython), en los términos de la licencia libre abajo indicada.*\n",
+    "\n",
     "\n",
     "*A Whirlwind Tour of Python* is a fast-paced introduction to essential\n",
     "components of the Python language for researchers and developers who are\n",
@@ -103,9 +103,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
